[package]
name = "nanohat-oled-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crossbeam-channel = "0.5"
embedded-hal = "1.0"
fs2 = "0.4"
gpio-cdev = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
linux-embedded-hal = "0.4"
log = "0.4"
nix = { version = "0.29", features = ["fs", "process"] }
rusttype = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
